fixed wrong answer message in anagram game. fixed bug on multiplication and division game on mobiles.

--- a/public/assets/css/smaller-phones-p.css
+++ b/public/assets/css/smaller-phones-p.css
@@ -85,8 +85,8 @@ h1 {
 
 .restart-game-btn {
     float: left;
-    margin-right: 15px;
-    margin-top: -5px;
+    margin-right: 5px;
+    margin-top: -2px;
 }
 
 /*math page*/
